increase the expey of token to can test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-aut.secret=orangeLabSecret@1235
-auth.expiration=524444
+aut.secret=three2oneSecret@1235
+auth.expiration=52444454545454
 auth.header=Authorization
 
 spring.jpa.hibernate.ddl-auto=update
